# API.py
@@ -1,33 +1,52 @@
-def OK(data):
-    return _200(data)
+# Aliases
 
-def Error(message):
-    return _400(message)
+def OK(data, headers=None):
+    return _200(data, headers)
 
-def NotFound(message):
-    return _404(message)
+def Error(message, headers=None):
+    return _400(message, headers)
 
-def Created(data):
-    return _201(data)
+def NotFound(message, headers=None):
+    return _404(message, headers)
 
-def _200(data):
-    return success(data, 200)
+def Unauthenticated(message, headers=None):
+    return _401(message, headers)
 
-def _201(data):
-    return success(data, 201)
+def Created(data, headers=None):
+    return _201(data, headers)
 
-def _400(message):
-    return fail({ "message": message }, 400)
+# Success
 
-def _404(message):
-    return fail({ "message": message }, 404)
+def _200(data, headers=None):
+    return success(data, 200, headers)
 
-def success(data, code):
-    return response({ "data": data, "error": None, "success": True }, code)
+def _201(data, headers=None):
+    return success(data, 201, headers)
 
-def fail(data, code):
-    return response({ "data": None, "error": data, "success": False }, code)
+# Errors
+def _400(message, headers=None):
+    return fail({ "message": message }, 400, headers)
+
+def _401(message, headers=None):
+    return fail({ "message": message }, 401, headers)
+
+def _404(message, headers=None):
+    return fail({ "message": message }, 404, headers)
 
 
-def response(data, code):
-    return data, code, { 'Content-Type': 'application/json' }
+# Base functionality 
+def success(data, code, headers=None):
+    return response({ "data": data, "error": { "message": "" }, "success": True }, code, headers)
+
+def fail(data, code, headers=None):
+    return response({ "data": None, "error": data, "success": False }, code, headers)
+
+
+def response(data, code, headers=None):
+    respHeaders = { 'Content-Type': 'application/json' }
+
+    if headers:
+        for key in headers:
+            respHeaders[key] = headers[key]
+
+    return data, code, respHeaders
